tests/ui/impl-header-lifetime-elision/assoc-type.stderr
error: in the trait associated type is declared without lifetime parameters, so using a borrowed type for them requires that lifetime to come from the implemented type
  --> $DIR/assoc-type.rs:11:19
   |
LL | impl MyTrait for &i32 {
   |     - you could add a lifetime on the impl block, if the trait or the self type can have one
LL |     type Output = &i32;
   |                   ^ this lifetime must come from the implemented type

error[E0637]: `'_` cannot be used here
  --> $DIR/assoc-type.rs:16:20
   |
LL |     type Output = &'_ i32;
   |                    ^^ `'_` is a reserved lifetime name

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0637`.
